--- a/config/config.yaml
+++ b/config/config.yaml
@@ -10,9 +10,10 @@ settings:
    w: 400
    h: 300
    food_start: 50
-   food_rate: 50
+   food_rate: 45
   food_mass: 0.2
   log_freq: 25
+  drag: 0.05
  eo_constants:
   main:
    rep_threshold: 15
