--- a/config/config.yaml
+++ b/config/config.yaml
@@ -27,4 +27,5 @@ settings:
    poke_force_factor: 0.5
    mass_factor: 0.1
   dna:
-   mutation_factor: 0.25
+   mutation_factor: 0.20
+   forget_factor: 0.01
