--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,30 +1,26 @@
 settings:
- log:
-  console_level: 2					## 1:debug,2:info,3:warn,4:error,5:fatal
-  file_level: 1
-  pop_freq: 25
-  types:
-   activity: true
-   population: true
- pond:
-  choice: large
+ choice: large
+ environment:
+  framerate: 10
   large:
    w: 640
    h: 480
+  small:
+   w: 400
+   h: 300
+ pond:
+  large:
    food_start: 150
    food_rate: 20
    eo_start: 6
    repop: 5
   small:
-   w: 400
-   h: 300
    food_start: 50
    food_rate: 45
    eo_start: 4
    repop: 2
-  framerate: 10
+  pop_log_freq: 25
   food_mass: 0.2
-  log_freq: 25
   drag: 0.04
   zones: 4
  eo_constants:
@@ -43,3 +39,10 @@ settings:
    mutation_factor: 0.12
    mutation_variance: 1.25
    forget_factor: 0.012
+ log:
+  console_level: 2					## 1:debug,2:info,3:warn,4:error,5:fatal
+  file_level: 1
+  pop_freq: 25
+  types:
+   activity: true
+   population: true
