--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,6 +2,7 @@ choice: regular
 settings:
  environment:
   framerate: 10
+  framerate_limit: 0.075
   large:
    w: 800
    h: 600
@@ -53,11 +54,11 @@ settings:
   dna:
    mutation_factor: 0.12
    mutation_variance: 1.1
-   brain_mutate_factor: 0.11
-   forget_factor: 0.012
-   initial_variance: 2
+   brain_mutate_factor: 0.04
+   forget_factor: 0.01
+   initial_variance: 1.5
    mutation_curve: 3
-   color_var_factor: 1.5
+   color_var_factor: 2
  log:
   console_level: 2					## 1:debug,2:info,3:warn,4:error,5:fatal
   file_level: 1
