program length tweaks, argument loading fixes, eo color pallet

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -79,7 +79,7 @@ settings:
   types:
    activity: true
    population: false
-   framerate: true
+   framerate: false
 override:
  profile:
   eo_constants:
