Revert "program length tweaks, argument loading fixes, eo color pallet"
This reverts commit b53f0864659896f6a0367f7e48c72bec1510191d.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -79,7 +79,7 @@ settings:
   types:
    activity: true
    population: false
-   framerate: false
+   framerate: true
 override:
  profile:
   eo_constants:
