bug fixes, spike tweaks, changing reproduction rate

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -50,8 +50,8 @@ settings:
   auto_track: true
  eo_constants:
   main:
-   rep_threshold: 15
-   rep_rate: 3300
+   rep_threshold: 17.5
+   rep_rate: 3500
    energy_cap: 200
    healing_drain_min: 0.94
    healing_drain_max: 0.98
@@ -81,7 +81,7 @@ settings:
   types:
    activity: true
    population: true
-   framerate: true
+   framerate: false
 override:
  profile:
   eo_constants:
