--- a/config/config.yaml
+++ b/config/config.yaml
@@ -80,7 +80,7 @@ settings:
   fr_freq: 25
   types:
    activity: true
-   population: true
+   population: false
    framerate: false
 override:
  profile:
