--- a/config/config.yaml
+++ b/config/config.yaml
@@ -52,6 +52,7 @@ settings:
   main:
    rep_variance: 0.25
    rep_rate: 3750
+   rep_minimum: 7.5
    energy_cap: 200
    healing_drain_min: 0.94
    healing_drain_max: 0.98
