--- a/config/config.yaml
+++ b/config/config.yaml
@@ -62,6 +62,7 @@ settings:
    mass: 10
    recovery: 0.0125
    damage: 0.2
+   decay: 0.95
   feeler:
    poke_force_factor: 0.5
    mass_factor: 0.1
