this project put on hold, until I can get log4r to release the error file

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -83,10 +83,12 @@ settings:
   file_level: 1
   pop_freq: 25
   fr_freq: 25
+  clean_err: true
   types:
    activity: true
    population: false
    framerate: false
+   error: true
 override:
  default_overrides:
   
