--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,7 +3,7 @@ settings:
  environment:
   framerate: 10
   framerate_limit: 0.075
-  eo_archive_limit: 1000000
+  eo_archive_limit: 500000
   eo_archive_cleanup: 100000
   huge:
    w: 1000
