--- a/config/config.yaml
+++ b/config/config.yaml
@@ -61,8 +61,9 @@ settings:
    healing_drain_min: 0.942
    healing_drain_max: 0.985
    spike_damage: 1.5
+   mass_drag: 1
   body:
-   body_mass: 10
+   body_mass_factor: 2.5
    recovery: 0.0125
    body_damage: 0.2
    body_decay: 0.95
